[tool.poetry]
name = "splink_graph"
version = "0.3.17"
description = "a small set of graph functions to be used from pySpark on top of networkx and graphframes"
authors = ["Theodore Manassis <theodore.manassis@digital.justice.gov.uk>"]
keywords = ["graph theory", "graph metrics"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/moj-analytical-services/splink_graph"
repository = "https://github.com/moj-analytical-services/splink_graph"
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.7"
pyspark = ">= 2.4"
networkx = "^2.5.1"
numpy = "1.19.5"
[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
