[tool.poetry]
name = "splink_graph"
version = "0.4.14"
description = "a small set of graph functions to be used from pySpark on top of networkx and graphframes"
authors = ["Theodore Manassis <theodore.manassis@digital.justice.gov.uk>"]
keywords = ["graph theory", "graph metrics"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/moj-analytical-services/splink_graph"
repository = "https://github.com/moj-analytical-services/splink_graph"
include = [
    "LICENSE",
]
[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.5.1"
scipy = ">= 1.6.0"
numpy = "1.19.5"
node2vec = "0.4.3"
graphframes = "0.6.0"
[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
